# mercury

./: Cargo.toml  README.md
delta/: Cargo.toml
src/: lib.rs
src/delta/: mod.rs
src/delta/decode/: mod.rs
src/delta/encode/: mod.rs
src/internal/object/: tree.rs
src/internal/pack/: decode.rs  encode.rs
src/zstdelta/: mod.rs
zstdelta/: Cargo.toml
