[package]
name = "git-internal"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite"] }
flate2 = { version = "1.1.1", features = ["zlib"] }
serde = { version = "1.0.219", features = ["derive"] }
bstr = "1.12.0"
hex = "0.4.3"
thiserror = "2.0.12"
tracing = "0.1.41"
sha1 = "0.10.6"
colored = "3.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
threadpool = "1.8.1"
num_cpus = "1.17.0"
dashmap = "6.1.0"
tokio = { version = "1.45.1", features = ["fs"] }
lru-mem = "0.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
byteorder = "1.5.0"
futures-util = "0.3.31"
bytes = "1.10.1"
axum = { version = "0.8.4", features = ["macros", "json"] }
memchr = "2.7.4"
encoding_rs = "0.8.35"
rayon = "1.10.0"
reqwest = "0.12.18"
ring = "0.17.14"
serde_json = "1.0.140"
ahash = "0.8.12"
diffs = "0.5.1"
libc = "0.2.172"
zstd-sys = { version = "2.0.15+zstd.1.5.7", features = ["experimental"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }

[features]
default = ["diff_mydrs"]
diff_mydrs = []
