[package]
name = "delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffs = "0.5.1"
thiserror = "2.0.12"
flate2 = { version = "1.1.1", features = ["zlib"] }
rayon = "1.10.0"
[features]
default = ["diff_mydrs"]
diff_mydrs = []
